--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -12,17 +12,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Jekyll
-      uses: jekyll-actions/setup@v1
+
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.2'
+
     - name: Install dependencies
       run: |
         gem install bundler
         bundle install
+
     - name: Build site
       run: |
         bundle exec jekyll build
+
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
