--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -11,12 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.2'
+        ruby-version: '3.2'  # Specify the Ruby version you need
 
     - name: Install dependencies
       run: |
@@ -27,8 +28,9 @@ jobs:
       run: |
         bundle exec jekyll build
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Deploy to GitHub Pages
+      uses: jamesives/github-pages-deploy-action@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
+        branch: gh-pages        # Branch where the site will be deployed
+        folder: _site           # Directory containing the built site
+        token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token for authentication
